fixed hero-image layout issue

--- a/less/index.less
+++ b/less/index.less
@@ -120,8 +120,6 @@ html, body {
 }
 
 section {
-    background: inherit;
-    color:white;
     border: black 2px solid;
 }
 
@@ -133,15 +131,37 @@ section {
 }
 
 .text-content {
-    padding: 100px;
+    padding: 5%;
+    text-align: center;
 }
 .section1 {
     width: 100%;
     height: 100%;
+    color: white;
+    .text-content {
+        padding-top: 20%;
+    }
 }
 
 .section2 {
     width: 100%;
     height: 50%;
 
+}
+
+.section3 {
+    .flex-container {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-around;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    .flex-item {
+        border: 2px black solid;
+        font-size: 13px;
+        text-align: center;
+        height: 150%;
+        margin-bottom: 5%;
+    }
 }
